<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="200dp"
    android:background="#040D16">

    <EditText
        android:id="@+id/marker_name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/gradient_1"
        android:hint="@string/marker"
        android:textColorHint="#C4C4C4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="60dp"
        android:layout_height="16dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="64dp"
        android:gravity="center"

        android:text="@string/cancel"
        android:textColor="@color/gradient_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marker_name" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="38dp"
        android:layout_height="16dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/gradient_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marker_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>